Fix Free tag overflow

--- a/src/styles/_homepage.sass
+++ b/src/styles/_homepage.sass
@@ -294,6 +294,7 @@ $node-type-post: #647bce
 
 				.activity-stream__list-details
 					flex: 1
+					overflow: hidden
 					position: relative
 					max-width: 100%
 					background-color: white
